static/css/base.css
body {
    text-align: left;
    height: 100%;

}

#container {
    height: 600px;
    overflow: scroll;
}

.title {
    text-align: center;
    padding-top: 15px;
    padding-left: 10px;
    padding-right: 30px;
    padding-bottom: 40px;
    border: 1px solid 000000;
}

.little_title {
    text-align: center;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

li {
    display: inline;
}

* {
    margin: 0;
    padding: 0;
}

.left {
    display: inline-block;
    width: 200px;
    height: 200px;
    background: #FFFFFF;
}

.right {
    height: 200px;
    background: #FF6633;
    display: inline-block;
    vertical-align: top;
    /*与左侧div顶部对齐*/
}

.top-n {
    position: absolute;
    display: inline-block;
    padding: 0 0.4em;
    line-height: 1.4em;
    font-family: 'Times New Rome', serif;
    background: #dfdfdf;
    font-size: 11px;
    border-radius: 2px;
    color: #fff;
    left: -5px;
    top: -6px;
    text-align: center;
}

.praise-heart {
    position: absolute;
    display: inline-block;
    padding: 0 0.4em;
    line-height: 1.4em;
    font-family: 'Times New Rome', serif;
    /*opacity:0;*/
    /*background: #dfdfdf;*/
    font-size: 11px;
    border-radius: 20px;
    /*color: #fff;*/
    left: 1px;
    top: 1px;
    text-align: center;
}

.name {
    color: #45b;
    font-size: 14px;
    margin: 0.8em 0 0;
. rbox-supple border-top: 1 px solid #f98;
}

.pic-nav-name {
    color: #45b;
    font-size: 14px;
    margin: 0.8em 0 0;
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 100px;
    letter-spacing: 1px;
. rbox-supple border-top: 1 px solid #f98;
}

.pic {
    margin: 0.6em auto;
    text-align: left;
    imgborder: 1px solid #eee;
    padding: 3px;
border-radius(2 px)
}

.p-tags {
    letter-spacing: 1px;
    line-height: 1px;
    padding-top: 15px;
    /*padding: 0;*/
    margin: 0;
    margin-top: -5px;
    margin-bottom: -10px;
    font-size: 13px;
    /*font-weight: 10px;*/
    color: #b3b3b3;
    height: 2.4em;
    text-align: left;
}

.p-text-overflow {
    letter-spacing: 1px;
    line-height: 1px;
    padding-top: 15px;
     /*width:150px;*/
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
    /*padding: 0;*/
    margin: 0;
    margin-top: -5px;
    margin-bottom: -10px;
    font-size: 13px;
    /*font-weight: 10px;*/
    color: #b3b3b3;
    height: 2.4em;
    text-align: left;
}

.show-last-loading-time {
    letter-spacing: 1px;
    line-height: 1px;
    padding: 0;
    margin: 0;
    margin-left: 5px;
    margin-top: 25px;
    margin-bottom: -20px;
    font-size: 1px;
    /*font-weight: 10px;*/
    color: #b3b3b3;
    height: 2.4em;
    text-align: left;
}

.p-tags-center {
    letter-spacing: 1px;
    line-height: 1px;
    padding: 0;
    margin: 0;
    margin-top: 5px;
    margin-bottom: -10px;
    font-size: 13px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
    /*font-weight: 10;*/
    color: #b3b3b3;
    height: 2.4em;
    text-align: center;
}

.p-li {
    position: relative;
    vertical-align: top;
    display: inline-block;
    margin: 10px 8px 30px;
}

.li-photo {
    position: relative;
    vertical-align: top;
    display: inline-block;
    /*margin: 10px 8px 30px;*/
}

.rightTop {
    position: absolute;
    right: 0;
    /*left: 0;*/
    top: 0;
}

/*nav相关*/
.global-nav {
    display: block;
    margin: 0;
    padding: 0;
    height: 28px;
    color: #d5d5d5;
    background-color: #545652;
    /*min-width: 950px;*/
    min-width: 100%;
    /*position: fixed;*/
}

.global-nav-items li {
    display: inline-block;
    zoom: 1;
    line-height: 28px;
    font-size: 12px;
    vertical-align: baseline;
    list-style: none;
}

.global-nav-items a {
    display: inline-block;
    zoom: 1;
    padding: 0 12px;
    height: 28px;
    color: #d5d5d5;
    text-decoration: none;
    cursor: pointer;
}

/*nav相关end*/

/*div弹出相关*/
.bg {
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    background: #000;
    z-index: 2;
    top: 0;
    left: 0;
    opacity: 0.7;
}

.search-div {
    display: none;
    width: 600px;
    /*height: 100px;*/
    position: fixed;
    top: 50%;
    /*padding-top: 15px;*/
    /*padding-bottom: -100px;*/
    margin-top: -150px;
    background: #fff;
    z-index: 3;
    left: 50%;
    margin-left: -250px;
}

/*div弹出相关 end*/

body, html {
    margin: 0;
    padding: 0;
    font: 12px/1.5 arial;
    height: 100%;
}

#content {
    min-height: 100%;
    position: relative;
}

#main {
    padding: 10px;
    padding-bottom: 60px;
}

#footer {
    position: absolute;
    bottom: 0;
    padding: 10px 0;
    background-color: #ffffff;
    width: 100%;
}

#footer h1 {
    font: 20px/2 Arial;
    margin: 0;
    padding: 0 10px;
}

